--- a/site/resources/styles/core/core.less
+++ b/site/resources/styles/core/core.less
@@ -1563,11 +1563,11 @@ hr
   display: inline-block;
 }
 
-@import "forms/form-core";
+@import "form-core";
 @import "common-forms";
-@import "forms/ltr-layout";
-@import "forms/top-layout";
-@import "forms/theme";
+@import "form-layout-ltr";
+@import "form-layout-rtl";
+@import "form-layout-top";
 
 @media print
 {
