--- a/site/resources/styles/core/form-layout-rtl.less
+++ b/site/resources/styles/core/form-layout-rtl.less
@@ -1,7 +1,7 @@
-@import "../core-values";
+@import "core-values";
 @import "form-values";
 
-.basic-form
+.basic-form.rtl
 {
   text-align: right;
 
