--- a/site/resources/styles/core/form-values.less
+++ b/site/resources/styles/core/form-values.less
@@ -1,4 +1,4 @@
-@import "../core-values";
+@import "core-values";
 
-@core-label-area-width: 200px;
+@core-label-area-width: 100px;
 @label-area-width: @core-label-area-width + @standard_spacing;
