--- a/site/resources/styles/core/form-layout-ltr.less
+++ b/site/resources/styles/core/form-layout-ltr.less
@@ -13,6 +13,14 @@
       margin-top: .15em;
     }
 
+    &.toggle
+    {
+      legend
+      {
+        margin-top: 0;
+      }
+    }
+
     margin-left: @label-area-width;
 
     fieldset
