--- a/site/resources/styles/themes/midnight.css
+++ b/site/resources/styles/themes/midnight.css
@@ -39,6 +39,11 @@ http://www.earthli.com/software/webcore
   border: 1px solid #4d4d4d;
   border-radius: 4px;
   padding: 4px;
+}
+.style-controls label:first-child + input[type=text],
+.style-controls label:first-child + input[type=password],
+.style-controls label:first-child + select,
+.style-controls label:first-child + textarea {
   margin-left: -5px;
 }
 .style-controls input[disabled],
