Finalized formatting for the various radio/checkbox combinations

--- a/site/resources/styles/core/core.css
+++ b/site/resources/styles/core/core.css
@@ -1168,6 +1168,10 @@ input + input[type=submit] {
   float: left;
   margin-right: 5px;
 }
+.basic-form fieldset.toggle .toggle + .description {
+  display: block;
+  margin-left: 18px;
+}
 .basic-form input,
 .basic-form textarea,
 .basic-form select {
@@ -1209,6 +1213,11 @@ input + input[type=submit] {
   float: left;
   margin-right: 5px;
 }
+.basic-form .form-row input[type=radio]:first-child,
+.basic-form .form-row input[type=checkbox]:first-child {
+  float: left;
+  margin-right: 5px;
+}
 .basic-form .form-row label:not(:first-child) + input[type=radio],
 .basic-form .form-row label:not(:first-child) + input[type=checkbox] {
   margin-left: 5px;
@@ -1216,6 +1225,8 @@ input + input[type=submit] {
 .basic-form .form-row label .description {
   display: block;
   margin-left: 18px;
+}
+.basic-form .form-row label .description:first-child {
   position: relative;
   top: 4px;
 }
