--- a/site/resources/styles/core/core.less
+++ b/site/resources/styles/core/core.less
@@ -424,6 +424,11 @@ pre > code
   margin-left: @standard_spacing;
 }
 
+.log-in-form
+{
+  width: 30em;
+}
+
 .form-content,
 .grid-content,
 .button-content,
@@ -626,7 +631,7 @@ td.object-in-list + td.object-in-list
 
 .icon
 {
-  display: inline;
+  display: inline-block;
   background-repeat: no-repeat;
 }
 
@@ -1286,7 +1291,6 @@ hr
 
 .description
 {
-  margin-top: @small_spacing;
   margin-bottom: @standard_spacing;
 }
 
