--- a/site/resources/styles/themes/blue_tan.less
+++ b/site/resources/styles/themes/blue_tan.less
@@ -39,7 +39,7 @@ http://www.earthli.com/software/webcore
 @banner_link_hover_color: #CF9;
 @footer_link_hover_color: @banner_link_hover_color;
 
-@standard_border: darken(@background_color, 20%);
+@standard_border_color: darken(@background_color, 20%);
 
 @title_color: #369;
 @banner_title_color: white;
