--- a/site/resources/styles/themes/hochzeit.less
+++ b/site/resources/styles/themes/hochzeit.less
@@ -32,7 +32,7 @@ http://www.earthli.com/software/webcore
 @banner_title_color: @background_color;
 @banner_background_color: #BBAA99;
 @footer_background_color: @banner_background_color;
-@accent_border: lighten(@text_color, 30%);
+@accent_border_color: lighten(@text_color, 30%);
 @link_color: #5579C4;
 @highlighted_text_color: #c72c1b;
 @selected_text_color: @title_color;
