--- a/site/resources/styles/themes/ice.less
+++ b/site/resources/styles/themes/ice.less
@@ -27,8 +27,8 @@ http://www.earthli.com/software/webcore
 @import "theme-base";
 
 @background_color: white;
-@standard_border: #8aabca;
-@accent_border: @title_color;
+@standard_border_color: #8aabca;
+@accent_border_color: @title_color;
 @text_color: #333;
 @title_color: #4A8CCA;
 @link_color: #3477B1;
