--- a/site/resources/styles/themes/theme-base-dark.less
+++ b/site/resources/styles/themes/theme-base-dark.less
@@ -8,9 +8,9 @@
 @link_color: blue;
 @dimmer_link_color: lighten(@link_color, 15%);
 
-@standard_border: lighten(@background_color, 40%);
-@medium_border: lighten(@standard_border, 10%);
-@accent_border: lighten(@standard_border, 20%);
+@standard_border_color: lighten(@background_color, 40%);
+@medium_border_color: lighten(@standard_border, 10%);
+@accent_border_color: lighten(@standard_border, 20%);
 
 @control_background_color: lighten(@background_color, 8%);
 
