--- a/site/resources/styles/core/common-forms.less
+++ b/site/resources/styles/core/common-forms.less
@@ -28,6 +28,10 @@ input[type=submit]:extend(button all){}
 
   label:first-child
   {
+    & + div > input[type=text]:first-child,
+    & + div > input[type=password]:first-child,
+    & + div > select:first-child,
+    & + div > textarea:first-child,
     & + input[type=text],
     & + input[type=password],
     & + select,
@@ -52,7 +56,8 @@ input[type=submit]:extend(button all){}
 {
   fieldset
   {
-    border-top: @hairline_border_width dotted @control_border_color;
+    border-top: @hairline_border_width solid @accent_border_color;
+    padding-top: @small_spacing;
 
     legend
     {
