--- a/site/resources/styles/themes/ice.css
+++ b/site/resources/styles/themes/ice.css
@@ -36,10 +36,14 @@ http://www.earthli.com/software/webcore
 .style-controls textarea {
   background-color: #ffffff;
   color: #666666;
-  border: 1px solid #c2c2c2;
+  border: 1px solid #8aabca;
   border-radius: 4px;
   padding: 4px;
 }
+.style-controls label:first-child + div > input[type=text]:first-child,
+.style-controls label:first-child + div > input[type=password]:first-child,
+.style-controls label:first-child + div > select:first-child,
+.style-controls label:first-child + div > textarea:first-child,
 .style-controls label:first-child + input[type=text],
 .style-controls label:first-child + input[type=password],
 .style-controls label:first-child + select,
@@ -54,7 +58,8 @@ http://www.earthli.com/software/webcore
   border-color: #d7d7d7;
 }
 .basic-form fieldset {
-  border-top: 1px dotted #c2c2c2;
+  border-top: 1px solid #4a8cca;
+  padding-top: 5px;
 }
 .basic-form fieldset legend {
   padding: 2px 4px;
@@ -159,7 +164,7 @@ h4 code {
 table.columns > tbody > tr > td,
 table.columns > tbody > tr > th,
 .abstract {
-  border-color: #c2c2c2;
+  border-color: #8aabca;
 }
 .quote-block,
 .preview,
@@ -167,12 +172,12 @@ table.columns > tbody > tr > th,
 pre > code,
 .basic-form-block,
 .pullquote {
-  border-color: #f2f2f2;
+  border-color: #4a8cca;
 }
 .object-navigator .links {
-  column-rule-color: #c2c2c2;
-  -webkit-column-rule-color: #c2c2c2;
-  -moz-column-rule-color: #c2c2c2;
+  column-rule-color: #8aabca;
+  -webkit-column-rule-color: #8aabca;
+  -moz-column-rule-color: #8aabca;
 }
 .info-box-top,
 .info-box-bottom,
@@ -230,15 +235,15 @@ pre > code,
 }
 ul.menu {
   background-color: #f8f8f8;
-  border-color: #c2c2c2;
+  border-color: #8aabca;
 }
 ul.menu .menu-group-title {
   background-color: #f0f0f0;
-  border-color: #c2c2c2;
+  border-color: #8aabca;
 }
 ul.menu .menu-item:hover {
   background-color: #ffffff;
-  border-color: #c2c2c2;
+  border-color: #8aabca;
 }
 ul.menu .menu-item-description {
   color: #666666;
@@ -248,7 +253,7 @@ ul.menu .menu-item-description {
 .style-controls input[type=button],
 .style-controls input[type=submit] {
   background-color: #f8f8f8;
-  border-color: #c2c2c2;
+  border-color: #8aabca;
   color: #666666;
 }
 a.button:link,
@@ -260,7 +265,7 @@ a.button:visited {
 .style-controls input[type=button].selected,
 .style-controls input[type=submit].selected {
   background-color: #4a8cca;
-  border-color: #c2c2c2;
+  border-color: #8aabca;
   color: #ffffff;
 }
 .button.disabled,
@@ -276,14 +281,14 @@ a.button:visited {
 .style-controls input[type=button]:hover:not(.disabled):not(.selected),
 .style-controls input[type=submit]:hover:not(.disabled):not(.selected) {
   background-color: #ffffff;
-  border-color: #c2c2c2;
+  border-color: #8aabca;
 }
 .style-controls input[type=text],
 .style-controls input[type=password],
 .style-controls select,
 .style-controls textarea {
   background-color: #ffffff;
-  border-color: #c2c2c2;
+  border-color: #8aabca;
   border-radius: 4px;
   padding: 4px;
 }
