--- a/site/resources/styles/themes/steel.css
+++ b/site/resources/styles/themes/steel.css
@@ -40,6 +40,10 @@ http://www.earthli.com/software/webcore
   border-radius: 4px;
   padding: 4px;
 }
+.style-controls label:first-child + div > input[type=text]:first-child,
+.style-controls label:first-child + div > input[type=password]:first-child,
+.style-controls label:first-child + div > select:first-child,
+.style-controls label:first-child + div > textarea:first-child,
 .style-controls label:first-child + input[type=text],
 .style-controls label:first-child + input[type=password],
 .style-controls label:first-child + select,
@@ -54,7 +58,8 @@ http://www.earthli.com/software/webcore
   border-color: #7c8ca3;
 }
 .basic-form fieldset {
-  border-top: 1px dotted #6c7a8d;
+  border-top: 1px solid #89a1c1;
+  padding-top: 5px;
 }
 .basic-form fieldset legend {
   padding: 2px 4px;
