--- a/site/resources/styles/core/core.css
+++ b/site/resources/styles/core/core.css
@@ -88,11 +88,15 @@ table.columns > tbody > tr > td:last-child,
 table.columns > tbody > tr > th:last-child {
   border-right: none;
 }
+table.numeric-data td {
+  text-align: right;
+}
 table.left-labels > tbody > tr > td:first-child,
 table.left-labels > tbody > tr > th:first-child {
   text-align: right;
   white-space: nowrap;
   border-bottom: none;
+  vertical-align: top;
 }
 table.left-labels.top > tbody > tr > td:first-child,
 table.left-labels.top > tbody > tr > th:first-child {
@@ -428,6 +432,18 @@ td.object-in-list + td.object-in-list {
 .icon {
   display: inline-block;
   background-repeat: no-repeat;
+  box-sizing: border-box;
+}
+div.icon {
+  display: block;
+}
+.one-hundred {
+  padding-left: 115px;
+  min-height: 100px;
+}
+.fifty {
+  padding-left: 65px;
+  min-height: 50px;
 }
 .thirty-two {
   padding-left: 37px;
@@ -440,6 +456,10 @@ td.object-in-list + td.object-in-list {
 .sixteen {
   padding-left: 21px;
   min-height: 16px;
+}
+.fifteen {
+  padding-left: 20px;
+  min-height: 15px;
 }
 /* @end */
 /* @group Dropdown Menu */
@@ -795,16 +815,8 @@ ul.minimal {
   list-style: none;
 }
 ul.minimal li {
-  margin: 0;
+  margin: 5px 0;
   padding: 0;
-}
-ul.minimal li .icon:first-child {
-  float: left;
-  margin-right: 5px;
-}
-ul.minimal li .icon.sixteen + .content {
-  display: block;
-  margin-left: 21px;
 }
 p div:first-child img:first-child {
   margin-top: 1.5em;
@@ -1224,6 +1236,7 @@ input + input[type=submit] {
 .basic-form .form-row label:first-child + input[type=checkbox] {
   float: left;
   margin-right: 5px;
+  margin-top: 6px;
 }
 .basic-form .form-row label:first-child + input[type=radio] + label,
 .basic-form .form-row label:first-child + input[type=checkbox] + label {
@@ -1234,6 +1247,11 @@ input + input[type=submit] {
 .basic-form .form-row input[type=checkbox]:first-child {
   float: left;
   margin-right: 5px;
+  margin-top: 6px;
+}
+.basic-form .form-row.text-line input[type=radio]:first-child,
+.basic-form .form-row.text-line input[type=checkbox]:first-child {
+  margin-top: 14px;
 }
 .basic-form .form-row label:not(:first-child) + input[type=radio],
 .basic-form .form-row label:not(:first-child) + input[type=checkbox] {
