--- a/site/resources/styles/core/medium.css
+++ b/site/resources/styles/core/medium.css
@@ -71,10 +71,10 @@ h5,
 
 .icon.twenty
 {
-  padding-top: .3em;
+  /*padding-top: .3em;*/
 }
 
 .icon.thirty-two
 {
-  padding-top: .8em;
+  /*padding-top: .8em;*/
 }
