--- a/site/resources/styles/themes/theme-base.less
+++ b/site/resources/styles/themes/theme-base.less
@@ -124,6 +124,19 @@ table.columns > tbody > tr > th,
   border-color: @standard_border_color;
 }
 
+p, div
+{
+  &.info-box-bottom
+  {
+    padding-top: @small_spacing;
+  }
+
+  &.info-box-top
+  {
+    padding-bottom: @small_spacing;
+  }
+}
+
 .quote-block,
 .preview,
 .chart,
