--- a/site/resources/styles/themes/hochzeit.css
+++ b/site/resources/styles/themes/hochzeit.css
@@ -184,6 +184,14 @@ table.columns > tbody > tr > th,
 .abstract {
   border-color: #cbc2b0;
 }
+p.info-box-bottom,
+div.info-box-bottom {
+  padding-top: 5px;
+}
+p.info-box-top,
+div.info-box-top {
+  padding-bottom: 5px;
+}
 .quote-block,
 .preview,
 .chart,
