--- a/site/resources/styles/themes/ice.css
+++ b/site/resources/styles/themes/ice.css
@@ -165,6 +165,14 @@ table.columns > tbody > tr > th,
 .abstract {
   border-color: #8aabca;
 }
+p.info-box-bottom,
+div.info-box-bottom {
+  padding-top: 5px;
+}
+p.info-box-top,
+div.info-box-top {
+  padding-bottom: 5px;
+}
 .quote-block,
 .preview,
 .chart,
